--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "style-it": "^2.1.4"
   },
   "devDependencies": {
     "@storybook/react": "5.1.9",
