--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
     "node": ">=10.4.0"
   },
   "scripts": {
-    "start": "start-storybook"
+    "start": "start-storybook",
+    "test": "jest --config ./jest.config.js"
   },
   "dependencies": {
+    "@types/jest": "^26.0.20",
+    "jest-diff": "^24.3.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "style-it": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
     "@storybook/react": "5.1.9",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/storybook__react": "4.0.2",
     "awesome-typescript-loader": "5.2.1",
+    "babel-jest": "^26.6.3",
     "core-js": "3.1.4",
-    "typescript": "3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.1",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.3",
     "webpack": "4.35.3"
   }
 }
