--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          npm install
+          sudo npm install
       - run: |
-          npm run test
+          sudo npm run test
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
