--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on: # rebuild any PRs and main branch changes
       - master
 
 jobs:
-  test: # make sure build/ci work properly
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,10 +14,3 @@ jobs:
           sudo npm install
       - run: |
           sudo npm run test
-#  test: # make sure the action works on a clean machine without building
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: ./
-#        with:
-#          milliseconds: 1000
